# tower-main

./: .clang-format  .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compose.yaml  devcontainer.json  docker-compose.yml  entrypoint.sh  settings.env
.devcontainer/: compose.extend.yaml  devcontainer.json
auth/: .env  Dockerfile  app.py  auth.env  config.py  entrypoint.sh  main.py  requirements.txt  utility.py
auth/secrets/: README.md
config/: users.sql
config/secrets/: README.md
data/monsters/: simple_monster.json
data/skills/: haste.json  melee_attack.json
data/weapons/: fist.json  schema.json
data/zones/: F1Z1.json
db/: Dockerfile  users.sql
db/init/: 01-users.sql  02-characters.sql  03-guilds.sql  characters.sql  guilds.sql  users.sql
db/secrets/: README.md
db/test/: 01-dummys.sql
main/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
main/dummy/: .gitignore  client.py  connection.py  main.py  requirements.txt
main/lib/py/: jwt_wrapper.py
main/schema/: CMakeLists.txt
main/schema/packet/: entity_types.fbs  packet_base.fbs  types.fbs
main/schema/packet/client/: client_join_response.fbs  heart_beat.fbs
main/schema/packet/entity/: entity_movements.fbs  entity_resource_modify.fbs  entity_spawn.fbs
main/schema/packet/player/: player_enter_zone.fbs  player_exit_zone.fbs  player_movement.fbs  player_spawn.fbs
main/schema/world/: tile_map_data.fbs  types.fbs  zone_data.fbs
main/schemas/packet/client/: client_join_request.fbs  heart_beat.fbs
main/schemas/packet/entity/: entity_despawn.fbs  entity_resource_modify.fbs
main/schemas/packet/entity/skill/: entity_melee_attack.fbs
main/schemas/world/: tile_map_data.fbs  zone_data.fbs
main/test/: CMakeLists.txt  main.cpp
main/test/db/: db.test.cpp
main/tests/: CMakeLists.txt
main/tower/: app.cpp  main.cpp
main/tower/entity/: entity.hpp
main/tower/item/equipment/: fist.hpp
main/tower/net/: client.cpp  client.hpp  connection.cpp  connection.hpp  connection.test.cpp  db.hpp  server.cpp  server.hpp  zone.cpp  zone.hpp
main/tower/network/: client.cpp  client.hpp  connection.cpp  connection.hpp  db.hpp  listener.hpp  server.cpp  server.hpp  server_shared_state.hpp  zone.cpp  zone.hpp
main/tower/player/: inventory.hpp  player.cpp  player.hpp  stat.cpp  stat.hpp
main/tower/system/: event.hpp  jwt.hpp  jwt.test.cpp  probe.hpp  settings.cpp  settings.hpp  timer.hpp
main/tower/system/container/: grid.hpp
main/tower/world/: path_finder.test.cpp  subworld.cpp  subworld.hpp  tile_map.hpp
main/tower/world/collision/: circle_collision_shape.cpp  collision_object.hpp  rectangle_collision_shape.cpp
main/tower/world/data/: types.hpp
main/tower/world/entity/: entity.hpp  entity_manager.hpp
main/tower/world/schema/: .gitignore  tile_map_data.fbs  zone_data.fbs
plugins/tracer/: CMakeLists.txt
redis/secrets/: README.md
secrets/: .gitignore  README.md  generate_secrets.py
server/: CMakeLists.txt
server/spire/net/: connection.hpp
spire/: main.cpp
spire/collision/: circle_shape.hpp  collision_shape.hpp  collision_shape.test.cpp  rectangle_shape.hpp
spire/containers/: concurrent_map.hpp  concurrent_queue.hpp
spire/game/: client.cpp  client.hpp  entity.cpp  entity.hpp  item.hpp  player.cpp  player.hpp
spire/game/equipment/: equipment.hpp  fist.cpp  fist.hpp
spire/game/player/: inventory.cpp  inventory.hpp  player.cpp  player.hpp
spire/net/: client.cpp  client.hpp  connection.hpp  listener.hpp  packet.hpp  server.cpp  server.hpp  zone.cpp  zone.hpp
spire/net/packet/: .gitignore  client_join.hpp  entity_action.hpp  entity_despawn.hpp  entity_movement.hpp  entity_resource_change.hpp  entity_spawn.hpp  entity_transform_update.hpp  packet.hpp  packet_base.hpp  player_despawn.hpp  player_spawn.hpp  spawn_player.hpp  types.hpp
spire/system/: event.hpp  event.test.cpp
spire/world/: node.hpp  world.cpp  world.hpp
spire/world/collision/: circle_collider.hpp  circle_collision_shape.hpp  collider.hpp  collision_object.hpp  collision_shape.hpp  rectangle_collider.hpp  rectangle_collision_shape.hpp
tests/: CMakeLists.txt  collision.test.cpp  transform.test.cpp
tower/: app.cpp  main.cpp  units.hpp
tower/container/: concurrent_map.hpp  concurrent_queue.hpp
tower/entity/: entity.hpp  entity_spawner.cpp  entity_spawner.hpp  loader.cpp  loader.hpp  simple_monster.cpp  simple_monster.hpp
tower/game/: entity.hpp  item.hpp  modifier.hpp  party.hpp
tower/game/equipment/: equipment.hpp  fist.hpp
tower/game/player/: inventory.cpp  inventory.hpp  player.cpp  player.hpp
tower/item/: gold.hpp  item.hpp  item_factory.cpp  item_factory.hpp  item_object.hpp  loader.cpp  loader.hpp  stackable.hpp
tower/item/equipment/: equipment.hpp  fist.cpp  fist.hpp  melee_attackable.hpp
tower/net/: client.cpp  client.hpp  client_room.hpp  connection.hpp  listener.hpp  packet.hpp  server.cpp  server.hpp  zone.cpp  zone.hpp
tower/network/: client.cpp  client.hpp  connection.cpp  connection.hpp  login_handler.cpp  login_handler.hpp  packet.hpp  profiler.hpp  server.cpp  server.hpp  server_shared_state.hpp  zone.cpp  zone.hpp
tower/network/packet/: .gitignore
tower/physics/: collision_object.hpp  collision_shape.hpp  cube_collision_shape.cpp  cube_collision_shape.hpp  sphere_collision_shape.cpp  sphere_collision_shape.hpp
tower/player/: inventory.cpp  inventory.hpp  player.cpp  player.hpp  stat.hpp
tower/player/skill/: melee_attack.hpp  skill.hpp
tower/player/state/: attacking_state.hpp  idle_state.hpp  jumping_state.hpp  running_state.hpp
tower/skill/: melee_attack.hpp
tower/system/: event.hpp  event.test.cpp  math.hpp  random.hpp  settings.cpp  settings.hpp  state.hpp  state_machine.hpp  timer.hpp
tower/system/container/: concurrent_map.hpp  grid.hpp
tower/world/: entity.hpp  navigator.hpp  navigator.test.cpp  node.hpp  path_finder.hpp  path_finder.test.cpp  subworld.cpp  subworld.hpp  tile_map.hpp  world.cpp  world.hpp  world_generator.cpp  world_generator.hpp  world_object.hpp  zone.cpp  zone.hpp
(+19 files in other folders)
